# SurviveIZV

./: .gitignore  CMakeLists.txt  README.md
assets/: placeholder.txt
assets/maps/: IZV-main.game-map  IzvMain.game-map  collisionTest.game-map  new-old-test.game-map  old-test.game-map  test.game-map  test.izv-map
assets/textures/: error.ase
helperScript/: encodeMap.py  in.txt  notes.txt
helperScript/RLEEncodeMap/: encodeMap.py  in.txt  notes.txt  out.game-map
helperScript/generateTileMapFromLevelImage/: doAllThat.py  level.game-map
rudolfaMape/SIZV_sprites/: Pelmenis_cur.ase  Pelmenis_inf.ase  inf_pal.ase
rudolfaMape/SIZV_sprites/Enemy/: Kvass.ase  Kvass_inf.ase
rudolfaMape/SIZV_sprites/Props/: lockers.ase
rudolfaMape/SIZV_sprites/Tiles/: floor_hall_1.ase  lounge_bare.ase  lounge_stripe.ase
rudolfaMape/SIZV_sprites/Weapons/: PotLaunch_extr.ase  PotLaunch_norm.ase
src/: Game.cpp  Game.hpp  SurviveIZV.cpp  World.cpp  World.hpp  logging.hpp
src/Core/: Game.cpp  Game.hpp  SurviveIZV.cpp  World.cpp  World.hpp
src/Entities/: Entity.cpp  Entity.hpp  InfectedKvass.cpp  InfectedKvass.hpp  InfectedPelmenis.cpp  InfectedPelmenis.hpp  InfectedSpageti.cpp  InfectedSpageti.hpp  Player.cpp  Player.hpp
src/Game/: Camera.cpp  Camera.hpp
src/Levels/: IzvMain.cpp  IzvMain.hpp  Level.cpp  Level.hpp
src/Ui/: Camera.cpp  Camera.hpp  MainMenu.cpp  MainMenu.hpp
src/Utils/: Math.hpp  TextureManager.cpp  TextureManager.hpp  globals.hpp  logging.hpp  math.cpp  math.hpp
